force-app/main/default/objects/Event_Organiser__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <description>This field contains email.</description>
    <inlineHelpText>Enter an alternate email</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>