force-app/main/default/objects/Event_Organiser__c/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <description>This field contains alternate phone number</description>
    <inlineHelpText>Enter alternate phone number.</inlineHelpText>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>