force-app/main/default/objects/Event_Organiser__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field contains email.</description>
    <inlineHelpText>Enter your email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>