force-app/main/default/objects/Event_Organiser__c/fields/Location_Address_Book__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field for location</description>
    <inlineHelpText>Select the location.</inlineHelpText>
    <label>Location (Address Book)</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Event Organizer</relationshipLabel>
    <relationshipName>Event_Organizer</relationshipName>
    <type>Lookup</type>
</CustomField>